--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello, world</h1>
+<!DOCTYPE html>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+  <h1>Hello, world</h1>
+</body>
+
