--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 
 <body>
-  <h1>Hello, world</h1>
+  <div class="big-box awemagical"></div>
+  <div class="small-box awemagical"></div>
+  <div class="small-box awemagical"></div>
+  <div class="big-box awemagical"></div>
 </body>
 
