--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div class="big-box awemagical"></div>
   <div class="small-box awemagical"></div>
-  <div class="small-box awemagical"></div>
+  <div class="small-box awemagical blue"></div>
   <div class="big-box awemagical"></div>
 </body>
 
