--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 </head>
 
 <body>
-  <div class="big-box awemagical"></div>
-  <div class="small-box awemagical"></div>
-  <div class="small-box awemagical blue"></div>
-  <div class="big-box awemagical"></div>
+  <div class="big-box awemagical">The width of this box is (100% - 30px). That's awemagical!</div>
+  <div class="small-box awemagical">The width of this box is (50% - 20px). Also awemagical!</div>
 </body>
 
